# esp-adf

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .lbcf.yml  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  conftest.py  export.bat  export.ps1  export.sh  install.bat  install.ps1  install.sh  project.mk  pytest.ini
adf_examples/services_hub/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
components/audio_hal/: .component.mk.swp  CMakeLists.txt  Kconfig.projbuild  audio_hal.c  audio_volume.c  component.mk
components/audio_hal/board/: ai_audio_v1_0_board.h  board.c  board.h  lyrat_v4_2_board.h  lyrat_v4_3_board.h  lyratd_msc_v2_1_board.h  lyratd_msc_v2_2_board.h  we_lin_board.h
components/audio_hal/include/: audio_hal.h  audio_volume.h
components/audio_hal/test/: test_audio_hal.c
components/clouds/: CMakeLists.txt  component.mk  idf_component.yml
components/dueros_service/: CMakeLists.txt  Kconfig  duer_audio_wrapper.c  duer_profile  duer_profile.c  duer_wifi_cfg.c  duer_wifi_cfg_bluedroid.c  duer_wifi_cfg_dummy.c  duer_wifi_cfg_if.h  dueros_esp_flash.c  dueros_service.c  esp_audio_device_info.c  nvs.csv
components/dueros_service/include/: duer_audio_wrapper.h  duer_profile.h  duer_wifi_cfg.h  dueros_service.h  esp_audio_device_info.h
components/esp_codec_dev/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  audio_codec_sw_vol.c  audio_codec_sw_vol.h  codec_dev_mirror.c  codec_dev_mirror.h  esp_codec_dev.c  esp_codec_dev_if.c  esp_codec_dev_vol.c  idf_component.yml
components/esp_codec_dev/include/: esp_codec_adc.h  esp_codec_dev.h  esp_codec_dev_defaults.h  esp_codec_dev_os.h  esp_codec_dev_types.h  esp_codec_dev_vol.h
components/esp_codec_dev/interface/: audio_codec_ctrl_if.h  audio_codec_data_if.h  audio_codec_gpio_if.h  audio_codec_if.h  audio_codec_vol_if.h
components/esp_codec_dev/platform/: audio_codec_ctrl_i2c.c  audio_codec_ctrl_spi.c  audio_codec_data_adc.c  audio_codec_data_i2s.c  audio_codec_gpio.c  esp_codec_dev_os.c
components/esp_codec_dev/test/: CMakeLists.txt  README.md  my_codec.c  my_codec.h  test_board.c  test_board.h
components/esp_config_manager/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/esp_config_manager/include/: esp_config_manager.h  esp_config_storage.h
components/esp_config_manager/src/: esp_config_manager.c  esp_config_storage.c  esp_config_storage_flash.c  esp_config_storage_fs.c  esp_config_storage_nvs.c
components/esp_coze/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_EN.md  http_client_post.c  http_client_request.c  idf_component.yml
components/esp_coze/include/: esp_coze_asr.h  esp_coze_chat.h  esp_coze_common.h  esp_coze_http.h  esp_coze_jwt.h  esp_coze_tts.h  esp_coze_utils.h  http_client_request.h
components/esp_coze/src/: coze_envelope.c  coze_envelope.h  coze_router.c  coze_router.h  coze_transport.c  coze_transport.h  esp_coze_asr.c  esp_coze_chat.c  esp_coze_chat_event.c  esp_coze_chat_priv.h  esp_coze_chat_protocol.c  esp_coze_http.c  esp_coze_jwt.c  esp_coze_trace.c  esp_coze_tts.c
components/esp_coze/test_apps/: CMakeLists.txt  pytest_esp_coze_test.py  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/esp_ota_service/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_ota_service/include/: esp_ota_service.h  esp_ota_service_default.h  esp_ota_service_mcp.h  esp_ota_service_version_utils.h
components/esp_ota_service/src/: esp_ota_service.c  esp_ota_service_app_desc_reader.c  esp_ota_service_mcp.c  esp_ota_service_mcp.json  esp_ota_service_version_utils.c
components/esp_ota_service/test_apps/: CMakeLists.txt  partition_table_unit_test_app.csv  pytest_esp_ota_service_test_apps.py  sdkconfig.defaults
components/esp_ota_service/tools/: README.md  _ble_at.py  _fw_common.py  build_firmware.py  gen_userdata_bin.py  ota_ble.py  ota_fs_flash_sdcard.py  ota_fs_test_resume.py  ota_http_serve.py
components/esp_playlist/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_playlist/docs/: playlist_usage_scenarios.md
components/esp_playlist/helper/: epl_cvector.c
components/esp_playlist/include/: esp_media_db.h  esp_media_db_types.h  esp_playlist.h
components/esp_playlist/private_inc/: epl_cvector.h  epl_db_storage_ops.h  epl_media_db_host.h  epl_media_db_types.h  epl_media_lib.h  epl_table_db.h
components/esp_playlist/src/: epl_db_storage_memory.c  epl_db_storage_vfs.c  epl_media_lib.c  epl_table_db.c  esp_media_db.c  esp_playlist.c
components/esp_playlist/test_apps/: CMakeLists.txt  partition.csv  pytest_esp_playlist.py  sdkconfig.ci  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/esp_service/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_service/include/: esp_service.h  esp_service_manager.h  esp_service_mcp_server.h  esp_service_mcp_trans.h  esp_service_mcp_trans_http.h  esp_service_mcp_trans_sdio.h  esp_service_mcp_trans_sse.h  esp_service_mcp_trans_stdio.h  esp_service_mcp_trans_uart.h  esp_service_mcp_trans_ws.h  esp_service_scheduler.h
components/esp_service/mcp/: esp_service_mcp_server.c  esp_service_mcp_trans.c
components/esp_service/service/: esp_service.c  esp_service_manager.c  esp_service_scheduler.c
components/esp_service/test_apps/: CMakeLists.txt  README.md  pytest_esp_service_test_apps.py  sdkconfig.defaults
components/esp_wifi_service/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_wifi_service/include/: esp_wifi_service.h  esp_wifi_service_mcp.h  esp_wifi_service_profile_mgr.h  esp_wifi_service_prov.h  esp_wifi_service_prov_blufi.h  esp_wifi_service_prov_http.h  esp_wifi_service_scan.h  esp_wifi_service_selector.h
components/esp_wifi_service/private_inc/: esp_wifi_service_comm.h  esp_wifi_service_prov_softap.h  (+4 more)
components/wifi_service/: CMakeLists.txt  component.mk
micropython_adf/boards/: CMakeLists.txt
(+2677 files in other folders)
