idf_component_register(
    SRCS
        "app_main.c"
        "test_fixtures.c"
        "test_storage.c"
        "test_media_db.c"
        "test_playlist.c"
        "test_playlist_filter.c"
        "test_playlist_ram.c"
        "test_lifecycle_leak.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        esp_playlist
        unity
        fatfs
        wear_levelling
        heap
    WHOLE_ARCHIVE
)
